[package]
name = "tigerturtle"
description = "Safely parse and evaluate toml files as bash variables"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/ArielHorwitz/tigerturtle"
license = "Unlicense"
keywords = [
    "toml",
    "parser",
    "bash",
]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
toml = "0.8.14"
